syntax = "proto3";

package server_description;

option go_package = "./";


import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message SimpleMessage {
  string message = 1;
}

service SimpleService {
  rpc health_check (google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/health"
    };
  }
  rpc hello_world (SimpleMessage) returns (SimpleMessage) {
    option (google.api.http) = {
      get: "/hello123_world"
    };
  }
}